css fixes; buttons now are more aligned wit website visual ID

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -5,6 +5,7 @@ button {
     padding: 0;
     font: inherit;
     cursor: pointer;
+    appearance: none;
     /* outline: inherit; */
 }
 
@@ -38,4 +39,5 @@ button {
 .btn:active {
     color: var(--primary);
     background-color: var(--secondary);
+    outline-color: var(--primary);
 }
