--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* font-size: 36px; */
+    font-size: 18px;
     writing-mode: horizontal-tb;
     direction: auto;
     transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
@@ -81,21 +81,22 @@ main {
     align-items: center;
     grid-template-areas: 'sum  details ';
     grid-template-columns: min-content 1fr;
-    grid-template-rows: 15rem;
+    grid-template-rows: 12rem;
     column-gap: 1rem;
 }
 
 .currentSummary svg {
-    width: 10rem;
+    width: 5rem;
 }
 
 
 
 /* START OF DAILY SUMMARY */
 .daySummary {
+
     text-align: center;
     aspect-ratio: 1;
-    width: 15rem;
+    width: 10rem;
     padding: 1rem;
     border-radius: 2ch;
     grid-area: sum;
@@ -149,16 +150,15 @@ main {
 }
 
 .weeklySummary {
-    border-top: .5rem var(--primary) solid;
+    border-top: .3rem var(--primary) solid;
     padding-block: 2rem;
-    margin-block-start: 4ch;
     grid-area: section1;
     margin-inline: auto;
     padding-inline: 2rem;
     display: flex;
     flex-wrap: wrap;
     gap: 3ch;
-    width: 90%;
+    width: 100%;
     justify-content: space-evenly;
     align-items: flex-start;
 }
@@ -173,10 +173,10 @@ main {
     border-radius: 2ch;
     display: flex;
     flex-direction: row;
-    height: 20px;
+    height: 2rem;
     aspect-ratio: 1.5;
     column-gap: 1ch;
-    padding-block: 5ch;
+    padding-block: 4ch;
     align-items: center;
     background-color: var(--primary);
     color: var(--secondary);
